fix: avoid overflow on app main container and footer
(cherry picked from commit a322f65b2d0a22bd18b63d1edb4dd9ea6ac7a965)

--- a/gravitee-apim-portal-webui-next/src/app/app.component.scss
+++ b/gravitee-apim-portal-webui-next/src/app/app.component.scss
@@ -17,12 +17,19 @@
 
 :host {
   display: flex;
+  width: 100%;
+  max-width: 100%;
   min-height: 95vh;
+  box-sizing: border-box;
   flex-flow: column;
   margin: auto;
   gap: 40px;
 }
 
 .main-container-wrapper {
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
   flex: 1 1 100%;
+  overflow-x: hidden;
 }
